{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 45,
  "lineage": "f8eb5c45-65ab-0fa8-da77-e5e0c09830a7",
  "resources": [
    {
      "module": "module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809411733541:security-group/sg-024572a3b9548ae9f",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-024572a3b9548ae9f",
            "ingress": [],
            "name": "ym_cluster-development-ym20210704185739700000000003",
            "name_prefix": "ym_cluster-development-ym",
            "owner_id": "809411733541",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ym_cluster-development-ym-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "ym_cluster-development-ym-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a867ed2b1a794f79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.aws_vpc.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809411733541:security-group/sg-0aa4b1f644f284e45",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0aa4b1f644f284e45",
            "ingress": [],
            "name": "ym_cluster-development-ym20210704185739699100000002",
            "name_prefix": "ym_cluster-development-ym",
            "owner_id": "809411733541",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ym_cluster-development-ym-eks_worker_sg",
              "kubernetes.io/cluster/ym_cluster-development-ym": "owned"
            },
            "tags_all": {
              "Name": "ym_cluster-development-ym-eks_worker_sg",
              "kubernetes.io/cluster/ym_cluster-development-ym": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a867ed2b1a794f79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.aws_vpc.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1112295588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-024572a3b9548ae9f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks.aws_security_group.cluster",
            "module.vpc_network.aws_vpc.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1196979619",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-024572a3b9548ae9f",
            "self": false,
            "source_security_group_id": "sg-0aa4b1f644f284e45",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks.aws_security_group.workers",
            "module.vpc_network.aws_vpc.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2242918885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0aa4b1f644f284e45",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks.aws_security_group.workers",
            "module.vpc_network.aws_vpc.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2835244192",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aa4b1f644f284e45",
            "self": false,
            "source_security_group_id": "sg-024572a3b9548ae9f",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks.aws_security_group.workers",
            "module.vpc_network.aws_vpc.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2773161220",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aa4b1f644f284e45",
            "self": false,
            "source_security_group_id": "sg-024572a3b9548ae9f",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks.aws_security_group.workers",
            "module.vpc_network.aws_vpc.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1559689279",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0aa4b1f644f284e45",
            "self": false,
            "source_security_group_id": "sg-0aa4b1f644f284e45",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks.aws_security_group.workers",
            "module.vpc_network.aws_vpc.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a8654b91e1454689",
            "domain": "vpc",
            "id": "eipalloc-05a583599251effb8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ac89cd7ccf4e8166",
            "private_dns": "ip-10-0-1-154.ec2.internal",
            "private_ip": "10.0.1.154",
            "public_dns": "ec2-52-1-150-33.compute-1.amazonaws.com",
            "public_ip": "52.1.150.33",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_gateway_eip-development-ym"
            },
            "tags_all": {
              "Name": "nat_gateway_eip-development-ym"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_network.aws_internet_gateway.internet_gateway",
            "module.vpc_network.aws_route_table.internet_gateway_route",
            "module.vpc_network.aws_route_table_association.internet_gateway_route_association",
            "module.vpc_network.aws_subnet.private_subnet-1",
            "module.vpc_network.aws_subnet.public_subnet-1",
            "module.vpc_network.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809411733541:internet-gateway/igw-084b17349ef9a00a1",
            "id": "igw-084b17349ef9a00a1",
            "owner_id": "809411733541",
            "tags": {
              "Name": "internet_gateway-development-ym"
            },
            "tags_all": {
              "Name": "internet_gateway-development-ym"
            },
            "vpc_id": "vpc-0a867ed2b1a794f79"
          },
          "dependencies": [
            "module.vpc_network.aws_subnet.private_subnet-1",
            "module.vpc_network.aws_subnet.public_subnet-1",
            "module.vpc_network.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a583599251effb8",
            "connectivity_type": "public",
            "id": "nat-036b8bf32c3a0957a",
            "network_interface_id": "eni-0ac89cd7ccf4e8166",
            "private_ip": "10.0.1.154",
            "public_ip": "52.1.150.33",
            "subnet_id": "subnet-01294bdda20dd3aba",
            "tags": {
              "Name": "nat_gateway-development-ym"
            },
            "tags_all": {
              "Name": "nat_gateway-development-ym"
            }
          },
          "dependencies": [
            "module.vpc_network.aws_eip.nat_gateway_eip",
            "module.vpc_network.aws_internet_gateway.internet_gateway",
            "module.vpc_network.aws_route_table.internet_gateway_route",
            "module.vpc_network.aws_route_table_association.internet_gateway_route_association",
            "module.vpc_network.aws_subnet.private_subnet-1",
            "module.vpc_network.aws_subnet.public_subnet-1",
            "module.vpc_network.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809411733541:route-table/rtb-0e7ca74076f9d25ed",
            "id": "rtb-0e7ca74076f9d25ed",
            "owner_id": "809411733541",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-084b17349ef9a00a1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "internet_gateway_route-development-ym"
            },
            "tags_all": {
              "Name": "internet_gateway_route-development-ym"
            },
            "vpc_id": "vpc-0a867ed2b1a794f79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.aws_vpc.vpc_network",
            "module.vpc_network.aws_internet_gateway.internet_gateway",
            "module.vpc_network.aws_subnet.private_subnet-1",
            "module.vpc_network.aws_subnet.public_subnet-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809411733541:route-table/rtb-0a1c954db94208163",
            "id": "rtb-0a1c954db94208163",
            "owner_id": "809411733541",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-036b8bf32c3a0957a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat_gateway_route-development-ym"
            },
            "tags_all": {
              "Name": "nat_gateway_route-development-ym"
            },
            "vpc_id": "vpc-0a867ed2b1a794f79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.aws_subnet.private_subnet-1",
            "module.vpc_network.aws_subnet.public_subnet-1",
            "module.vpc_network.aws_vpc.vpc_network",
            "module.vpc_network.aws_eip.nat_gateway_eip",
            "module.vpc_network.aws_internet_gateway.internet_gateway",
            "module.vpc_network.aws_nat_gateway.nat_gateway",
            "module.vpc_network.aws_route_table.internet_gateway_route",
            "module.vpc_network.aws_route_table_association.internet_gateway_route_association"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_gateway_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7d5a1d8f6b4e82c",
            "route_table_id": "rtb-0e7ca74076f9d25ed",
            "subnet_id": "subnet-01294bdda20dd3aba"
          },
          "dependencies": [
            "module.vpc_network.aws_internet_gateway.internet_gateway",
            "module.vpc_network.aws_route_table.internet_gateway_route",
            "module.vpc_network.aws_subnet.private_subnet-1",
            "module.vpc_network.aws_subnet.public_subnet-1",
            "module.vpc_network.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_gateway_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00896181c6c94e9af",
            "route_table_id": "rtb-0a1c954db94208163",
            "subnet_id": "subnet-06ef944093a93b719"
          },
          "dependencies": [
            "module.vpc_network.aws_nat_gateway.nat_gateway",
            "module.vpc_network.aws_route_table.internet_gateway_route",
            "module.vpc_network.aws_route_table.nat_gateway_route",
            "module.vpc_network.aws_subnet.private_subnet-1",
            "module.vpc_network.aws_vpc.vpc_network",
            "module.vpc_network.aws_eip.nat_gateway_eip",
            "module.vpc_network.aws_internet_gateway.internet_gateway",
            "module.vpc_network.aws_route_table_association.internet_gateway_route_association",
            "module.vpc_network.aws_subnet.public_subnet-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809411733541:subnet/subnet-06ef944093a93b719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06ef944093a93b719",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "809411733541",
            "tags": {
              "Name": "private_subnet-2-development-ym"
            },
            "tags_all": {
              "Name": "private_subnet-2-development-ym"
            },
            "vpc_id": "vpc-0a867ed2b1a794f79"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809411733541:subnet/subnet-01294bdda20dd3aba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01294bdda20dd3aba",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "809411733541",
            "tags": {
              "Name": "public_subnet-1-development-ym"
            },
            "tags_all": {
              "Name": "public_subnet-1-development-ym"
            },
            "vpc_id": "vpc-0a867ed2b1a794f79"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809411733541:vpc/vpc-0a867ed2b1a794f79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09328f321dce54726",
            "default_route_table_id": "rtb-0c31b6e3f1a7d34f5",
            "default_security_group_id": "sg-090e346ef257ef07e",
            "dhcp_options_id": "dopt-05296798be9ead788",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a867ed2b1a794f79",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c31b6e3f1a7d34f5",
            "owner_id": "809411733541",
            "tags": {
              "Name": "vpc-development-ym"
            },
            "tags_all": {
              "Name": "vpc-development-ym"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}